# arch

./: .gitignore  LICENSE  README.md
code/: CMakeLists.txt
code/.refactor-fadeout/libam/inc/: disposable.hpp  libam.hpp
code/.refactor-fadeout/module-archd/: CMakeLists.txt
code/.refactor-fadeout/module-archd/buildtools/: post-build-cmd-win32.bat
code/.refactor-fadeout/module-archd/inc/: mdlarchd.hpp
code/.refactor-fadeout/module-archd/src/: message.cpp
code/antennamsg/: CMakeLists.txt
code/archproto/: CMakeLists.txt
code/archproto/inc/: protocol-arch.hpp  protocol.hpp
code/archproto/src/: protocol-arch.cpp
code/archserver/: CMakeLists.txt
code/archserver/.refactor-fadeout/inc/: acquirable.hpp  archserver-prereq.hpp  base64.hpp  buffer.hpp  dllutils.hpp  module-builtin.hpp  module-plugin.hpp  module.hpp  protocol-arch.hpp  protocol-http.hpp  sha1.hpp  tcpserver.hpp  tcpsvc-worker.hpp  tcpsvc-workermgr.hpp  utilities.hpp
code/archserver/.refactor-fadeout/src/: buffer.cpp  config.cpp  modulemgr.cpp  protocol-http.cpp  protocol-websocket.cpp  tcpserver.cpp  tcpsvc-workermgr.cpp
code/archserver/buildtools/: post-build-cmd-win32.bat
code/archserver/inc/: acquirable.hpp  archexception.hpp  archmessage.hpp  archmessagequeue.hpp  archserver-prereq.hpp  config.hpp  disposable.hpp  dllutils.hpp  module-interfaces.hpp  module-plugin.hpp  module.hpp  modulemgr.hpp  pre-req.hpp  protocol-http.hpp  protocol-websocket.hpp  protocol.hpp  protocolproc.hpp  protocols.hpp  service-processor.hpp  tcpconn.hpp  tcpdata-queue-node.hpp  tcpdata-queue.hpp  tcpserver.hpp  tcpservice-protocols.hpp  tcpservice.hpp  tcpsvc-worker.hpp  tcpsvc-workermgr.hpp
code/archserver/inc/config/: config-master.hpp  config-mgr.hpp
code/archserver/inc/core/: acquirable.hpp  buffer.hpp  ccf.hpp  connection.hpp  connmap.hpp  pipeclient.hpp  protocol-arch.hpp  protocol-queue.hpp  protocol.hpp  tcpserver.hpp
code/archserver/inc/data/: vint.hpp  vuint.hpp
code/archserver/inc/exceptions/: ex-general.hpp
code/archserver/inc/ipro/: protocol-arch.hpp
code/archserver/inc/osys/: process.hpp
code/archserver/inc/svc/: rawsvcdata-handler.hpp  service-inst.hpp  service-mgr.hpp  service.hpp
code/archserver/shared_inc/: archmessage.hpp  archmessagequeue.hpp  disposable.hpp  module-interfaces.hpp  protocols.hpp  service-dataobj.hpp  service-processor.hpp
code/archserver/src/: archmessage.cpp  archmessagequeue.cpp  archserver.cpp  base64.cpp  config.cpp  dllutils.cpp  module-builtin.cpp  module-plugin.cpp  module.cpp  modulemgr.cpp  protocol-arch.cpp  protocol-http.cpp  protocol-websocket.cpp  sha1.cpp  tcpconn.cpp  tcpdata-queue-node.cpp  tcpdata-queue.cpp  tcpserver.cpp  tcpservice-protocols.cpp  tcpsvc-worker.cpp  tcpsvc-workermgr.cpp
code/archserver/src/config/: config-master.cpp  config-mgr.cpp
code/archserver/src/core/: buffer.cpp  pipeclient.cpp  protocol-arch.cpp  protocol-queue.cpp  tcpserver.cpp
code/archserver/src/data/: vint.cpp  vuint.cpp
code/archserver/src/ipro/: protocol-arch.cpp
code/archserver/src/osys/: process.cpp
code/archserver/src/svc/: rawsvcdata-handler.cpp  service-inst.cpp  service-mgr.cpp  service.cpp
code/archservice/: CMakeLists.txt
code/archservice/inc/: asvc-ccf.hpp  asvc-pipeserver.hpp  asvc-rawsvcdata-handler.hpp  asvc-service-instance.hpp  asvc-service.hpp  asvc-vint.hpp
code/archservice/src/: asvc-pipeserver.cpp  asvc-rawsvcdata-handler.cpp  asvc-service-instance.cpp  asvc-vint.cpp  asvc-vuint.cpp
code/libam/: CMakeLists.txt
code/libam/inc/: archmessage.hpp  module-interfaces.hpp  protocols.hpp
code/libam/src/: libam.cpp
code/module-archd/inc/: message.hpp
code/module-archd/src/: mdlarchd.cpp
code/module-demo/: CMakeLists.txt
code/module-demo/buildtools/: post-build-cmd-win32.bat
code/module-demo/inc/: mdldemo.hpp
code/module-demo/src/: mdldemo.cpp
code/module-httpd/: CMakeLists.txt
code/module-httpd/buildtools/: post-build-cmd-win32.bat
code/module-httpd/inc/: httpd.hpp
code/module-httpd/src/: httpd.cpp
code/svc-echo/: CMakeLists.txt
code/svc-echo/buildtools/: post-build-cmd-win32.bat
code/svc-echo/inc/: pre-req.hpp
code/svc-echo/src/: echo.cpp
code/svc-gamechannel/: CMakeLists.txt
code/svc-gamechannel/buildtools/: post-build-cmd-win32.bat
code/svc-gamechannel/inc/: pre-req.hpp
code/svc-gamechannel/inc/messages/: message-mgr.hpp  message.hpp  msg-joinchnl.hpp  service-msg.hpp
code/svc-gamechannel/inc/service/: channel.hpp  character.hpp  msg-registry.hpp  service-inst.hpp
code/svc-gamechannel/src/: gamechannel.cpp
code/svc-gamechannel/src/messages/: message-mgr.cpp  message.cpp  msg-joinchnl.cpp  service-msg.cpp
code/svc-gamechannel/src/service/: msg-registry.cpp  service-inst.cpp
code/vardata/: CMakeLists.txt
code/vardata/inc/: vardata-utilities.hpp
code/vardata/src/: vuint.cpp
gsvr/: boot-svr-dbg.bat
gsvr/config/: config-master.xml
test_env/archserver/: run_debug.bat  svr_config.xml
